# quantum_gate_package

./: ..gitignore.swp  .gitignore  Bell_State.ipynb  Bloch_Sphere.ipynb  Building_gate.ipynb  CHANGELOG.md  Entanglement entropy.ipynb  General_C_U.ipynb  LICENSE  Measurements.ipynb  Mulit_qubit_gate.ipynb  N_qubit_register.ipynb  README.md  Unified Quantum Gate Framework.ipynb  n_qubit_register.ipynb  pyproject.toml
.github/workflows/: python-tests.yml
src/quantum_gate_package/: __init__.py  operator.py
tests/: test_operator.py
