

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "quantum-gate-package"
version = "0.1.0"
description = "Quantum gate matrices and operators"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Abiy Zelalem Tegegne", email = "abiyzelalem8@gmail.com" }
]
dependencies = [
  "numpy"
]
keywords = [
  "quantum-gates",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Physics",
]
[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
[tool.setuptools.packages.find]
where = ["src"]
